<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/pasc_user_privacy_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginBottom="@dimen/dp_15"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_below="@id/user_fm_login">

        <ImageView
            android:id="@+id/pasc_user_privacy_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingRight="@dimen/dp_5"
            android:src="@drawable/single_unselect" />

        <TextView
            android:id="@+id/pasc_user_privacy_pre_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/user_login_agree"
            android:textColor="@color/gray_999999"
            android:textSize="@dimen/user_text_size_13" />

        <TextView
            android:id="@+id/pasc_user_privacy_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/user_login_privacy"
            android:textColor="@color/user_primary_color"
            android:textSize="@dimen/user_text_size_13" />

        <TextView
            android:id="@+id/pasc_user_privacy_agreement_split"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/user_privacy_agreement_split"
            android:textColor="@color/user_primary_color"
            android:textSize="@dimen/user_text_size_13" />

        <TextView
            android:id="@+id/pasc_user_agreement_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/user_register_sz_server"
            android:textColor="@color/user_primary_color"
            android:textSize="@dimen/user_text_size_13" />

    </LinearLayout>



</LinearLayout>