<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_e8e8e8"
    android:gravity="end"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/white_ffffff"
        android:gravity="center"
        android:text="@string/login_mobile_code_hint"
        android:textColor="@color/gray_999999"
        android:textSize="@dimen/text_size_13" />

    <TextView
        android:id="@+id/tv_functional"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:layout_marginTop="@dimen/dp_0.5"
        android:background="@color/white_ffffff"
        android:gravity="center"
        android:text="@string/login_phone_functional"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/sp_18" />

    <TextView
        android:id="@+id/tv_not_functional"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:layout_marginTop="@dimen/dp_0.5"
        android:background="@color/white_ffffff"
        android:gravity="center"
        android:text="@string/login_phone_not_functional"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/sp_18" />


    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:layout_marginTop="@dimen/dp_6"
        android:background="#ffffff"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/sp_18" />

</LinearLayout>