<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg"
    android:orientation="vertical">

    <com.pasc.lib.userbase.base.view.CommonTitleView
        android:id="@+id/user_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:title="@string/user_title_set_pwd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/user_account_verify"
            android:textColor="@color/gray_999999"
            android:textSize="@dimen/sp_13" />

        <TextView
            android:id="@+id/user_tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:gravity="center_vertical"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/sp_18" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white_ffffff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.pasc.lib.userbase.base.view.FormatEditText
                android:id="@+id/user_et_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/user_input_sms_code"
                android:inputType="phone"
                android:maxLength="7"
                android:textColor="#2e332f"
                android:textColorHint="#c7c7c7"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/user_tv_get_code"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingRight="10dp"
                android:text="@string/user_get_code"
                android:textColor="@color/pasc_primary"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/user_btn_next"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="30dp"
        android:alpha="0.3"
        android:background="@drawable/userbase_button_bg"
        android:enabled="false"
        android:gravity="center"
        android:text="下一步"
        android:textColor="@color/white_ffffff" />


</LinearLayout>
