<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg"
    android:orientation="vertical">

    <com.pasc.lib.userbase.base.view.CommonTitleView
        android:id="@+id/user_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/user_title_set_pwd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/default_bg"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_11"
            android:text="@string/user_title_set_pwd"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/sp_24"
            android:visibility="gone" />

        <TextView
            style="@style/user_tip_pwd_rule"
            android:layout_marginTop="@dimen/dp_15"
            android:paddingStart="@dimen/dp_15"
            android:paddingLeft="@dimen/dp_15"
            android:paddingEnd="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:text="@string/user_pwd_rule" />

        <TextView
            style="@style/user_tip_pwd_rule"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/user_pwd_contains_rule"
            android:visibility="gone" />

        <com.pasc.lib.userbase.base.view.ClearEditText2
            android:id="@+id/user_et_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_14"
            android:background="@color/white_ffffff"
            android:cursorVisible="true"
            android:hint="请输入新密码"
            android:inputType="textPassword"
            android:maxLength="32"
            android:paddingStart="@dimen/dp_15"
            android:paddingLeft="@dimen/dp_15"
            android:paddingEnd="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:textColor="@color/black_2e332f"
            android:textColorHint="@color/gray_c7c7c7"
            android:textSize="@dimen/text_size_16" />


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/gray_dddddd" />


        <com.pasc.lib.userbase.base.view.ClearEditText2
            android:id="@+id/user_et_confirm_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@color/white_ffffff"
            android:cursorVisible="true"
            android:hint="请再次输入新密码"
            android:inputType="textPassword"
            android:maxLength="32"
            android:paddingStart="@dimen/dp_15"
            android:paddingLeft="@dimen/dp_15"
            android:paddingEnd="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:textColor="@color/black_2e332f"
            android:textColorHint="@color/gray_c7c7c7"
            android:textSize="@dimen/text_size_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/gray_dddddd" />

        <Button
            android:id="@+id/user_btn_commit"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="30dp"
            android:layout_marginRight="@dimen/dp_15"
            android:alpha="0.3"
            android:background="@drawable/userbase_button_bg"
            android:enabled="false"
            android:text="确认"
            android:textColor="@color/white_ffffff"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>

</LinearLayout>