<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_ffffff">

    <ImageView
        android:id="@+id/user_iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="14dp"
        android:paddingRight="10dp"
        android:src="@drawable/ic_back_black"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="快速绑定"
        android:textColor="@color/black_2e332f"
        android:textSize="@dimen/text_size_18"
        android:visibility="gone" />

    <com.pasc.lib.userbase.base.view.CommonTitleView
        android:id="@+id/user_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/user_riv_head_logo"
        android:layout_width="@dimen/dp_68"
        android:layout_height="@dimen/dp_68"
        android:layout_below="@+id/user_title_bar"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="48dp"
        android:background="@null"
        android:src="@drawable/login_ic_head_portrait"
        app:riv_corner_radius="44dp" />

    <TextView
        android:id="@+id/user_tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/user_riv_head_logo"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/user_riv_head_logo"
        android:text="Hi,Harry"
        android:textColor="@color/black_2e332f"
        android:textSize="@dimen/text_size_22" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_tv_welcome"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="4dp"
        android:layout_toRightOf="@+id/user_riv_head_logo"
        android:text="请绑定手机号"
        android:textColor="@color/black_2e332f"
        android:textSize="@dimen/text_size_17" />

    <com.pasc.lib.userbase.base.view.FormatEditText
        android:id="@+id/user_et_user_phone_num"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/user_riv_head_logo"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:background="@null"
        android:drawablePadding="12dp"
        android:hint="@string/user_input_phone_number"
        android:inputType="phone"
        android:maxLength="13"
        android:maxLines="1"
        android:text=""
        android:textColor="@color/black_2e332f"
        android:textColorHint="@color/gray_c7c7c7"
        android:textCursorDrawable="@drawable/login_et_cursor"
        android:textSize="@dimen/text_size_16" />

    <View
        android:id="@+id/user_v_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5px"
        android:layout_below="@id/user_et_user_phone_num"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/gray_dddddd" />

    <RelativeLayout
        android:id="@+id/user_rl_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_v_divider"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="14dp"
        android:layout_marginRight="30dp">

        <com.pasc.lib.userbase.base.view.FormatEditText
            android:id="@+id/user_et_code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/user_tv_get_verify_code"
            android:background="@null"
            android:drawablePadding="12dp"
            android:hint="@string/user_input_sms_code"
            android:inputType="number"
            android:maxLength="7"
            android:maxLines="1"
            android:textColor="@color/black_2e332f"
            android:textColorHint="@color/gray_c7c7c7"
            android:textCursorDrawable="@drawable/login_et_cursor"
            android:textSize="@dimen/text_size_16" />


        <View
            android:id="@+id/user_v_divider2"
            android:layout_width="match_parent"
            android:layout_height="0.5px"
            android:layout_below="@id/user_et_code"
            android:background="@color/gray_dddddd" />

        <TextView
            android:id="@+id/user_tv_get_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/user_get_code"
            android:textColor="@color/pasc_primary"
            android:textSize="@dimen/text_size_16" />
    </RelativeLayout>



    <include
        android:id="@+id/login_activity_fast_bind_privacy"
        layout="@layout/login_include_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_below="@+id/user_rl_user_info"/>


    <Button
        android:id="@+id/user_btn_bind"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_below="@+id/login_activity_fast_bind_privacy"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_30"
        android:alpha="0.3"
        android:background="@drawable/userbase_button_bg"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/user_third_bind_confirm"
        android:textColor="@color/white_ffffff"
        android:textSize="@dimen/sp_17" />

    <TextView
        android:id="@+id/tv_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_btn_bind"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:lineSpacingExtra="@dimen/dp_3"
        android:text="@string/user_fast_bind_account_content"
        android:textColor="@color/gray_8D8D8D"
        android:textSize="@dimen/sp_14" />

    <LinearLayout
        android:id="@+id/login_activity_fast_bind_acount_server_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_tv_agree_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="完成即表示同意"
            android:textColor="@color/gray_8d8d8d"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/user_tv_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_register_sz_server"
            android:textColor="@color/pasc_primary"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>

</RelativeLayout>